--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=tasklist
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
   thymeleaf:
     prefix: classpath:/templates/
+minio:
+    bucket: resources
+    url: http://localhost:9000
+    accessKey: minioadmin
+    secretKey: minioadmin
 
 
