--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
             <artifactId>minio</artifactId>
             <version>8.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
 
 
